--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Northwind Commerce</title>
   <link rel="stylesheet" href="{% static 'css/base.css' %}">
-  <link rel="stylesheet" href="{% static 'css/index.css' %}">
-  {% block extra_styles %} {% endblock extra_styles %}
+  {% block extra_styles %}<link rel="stylesheet" href="{% static 'css/index.css' %}">{% endblock extra_styles %}
 </head>
 <body>
   <div class="page">
