--- a/admin_dashboard/templates/admin_dashboard/admin-orders.html
+++ b/admin_dashboard/templates/admin_dashboard/admin-orders.html
@@ -66,92 +66,92 @@
             <tbody>
               <tr>
                 <td><input type="checkbox"></td>
-                <td><a class="nav-item" href="admin-order-detail.html">#NW-10342</a></td>
+                <td><a class="nav-item" href="{% url 'admin-order-detail' %}">#NW-10342</a></td>
                 <td>Alex Chen</td>
                 <td>Nov 22</td>
                 <td>$320</td>
                 <td><span class="badge badge--success">Paid</span></td>
                 <td><span class="badge badge--success">Shipped</span></td>
                 <td class="table__actions">
-                  <a class="nav-link" href="admin-order-detail.html">View</a>
+                  <a class="nav-link" href="{% url 'admin-order-detail' %}">View</a>
                   <a class="nav-link" href="#">Refund</a>
                 </td>
               </tr>
               <tr>
                 <td><input type="checkbox"></td>
-                <td><a class="nav-item" href="admin-order-detail.html">#NW-10339</a></td>
+                <td><a class="nav-item" href="{% url 'admin-order-detail' %}">#NW-10339</a></td>
                 <td>Priya Desai</td>
                 <td>Nov 22</td>
                 <td>$540</td>
                 <td><span class="badge badge--warning">Pending</span></td>
                 <td><span class="badge badge--neutral">Processing</span></td>
                 <td class="table__actions">
-                  <a class="nav-link" href="admin-order-detail.html">View</a>
+                  <a class="nav-link" href="{% url 'admin-order-detail' %}">View</a>
                   <a class="nav-link" href="#">Capture</a>
                 </td>
               </tr>
               <tr>
                 <td><input type="checkbox"></td>
-                <td><a class="nav-item" href="admin-order-detail.html">#NW-10335</a></td>
+                <td><a class="nav-item" href="{% url 'admin-order-detail' %}">#NW-10335</a></td>
                 <td>Marcus Lee</td>
                 <td>Nov 21</td>
                 <td>$190</td>
                 <td><span class="badge badge--success">Paid</span></td>
                 <td><span class="badge badge--neutral">In transit</span></td>
                 <td class="table__actions">
-                  <a class="nav-link" href="admin-order-detail.html">View</a>
+                  <a class="nav-link" href="{% url 'admin-order-detail' %}">View</a>
                   <a class="nav-link" href="#">Hold</a>
                 </td>
               </tr>
               <tr>
                 <td><input type="checkbox"></td>
-                <td><a class="nav-item" href="admin-order-detail.html">#NW-10332</a></td>
+                <td><a class="nav-item" href="{% url 'admin-order-detail' %}">#NW-10332</a></td>
                 <td>Sofia Martens</td>
                 <td>Nov 21</td>
                 <td>$420</td>
                 <td><span class="badge badge--success">Paid</span></td>
                 <td><span class="badge badge--success">Shipped</span></td>
                 <td class="table__actions">
-                  <a class="nav-link" href="admin-order-detail.html">View</a>
+                  <a class="nav-link" href="{% url 'admin-order-detail' %}">View</a>
                   <a class="nav-link" href="#">Refund</a>
                 </td>
               </tr>
               <tr>
                 <td><input type="checkbox"></td>
-                <td><a class="nav-item" href="admin-order-detail.html">#NW-10330</a></td>
+                <td><a class="nav-item" href="{% url 'admin-order-detail' %}">#NW-10330</a></td>
                 <td>Daniel Ruiz</td>
                 <td>Nov 21</td>
                 <td>$155</td>
                 <td><span class="badge badge--warning">Pending</span></td>
                 <td><span class="badge badge--neutral">Processing</span></td>
                 <td class="table__actions">
-                  <a class="nav-link" href="admin-order-detail.html">View</a>
+                  <a class="nav-link" href="{% url 'admin-order-detail' %}">View</a>
                   <a class="nav-link" href="#">Capture</a>
                 </td>
               </tr>
               <tr>
                 <td><input type="checkbox"></td>
-                <td><a class="nav-item" href="admin-order-detail.html">#NW-10328</a></td>
+                <td><a class="nav-item" href="{% url 'admin-order-detail' %}">#NW-10328</a></td>
                 <td>Emily Hart</td>
                 <td>Nov 20</td>
                 <td>$265</td>
                 <td><span class="badge badge--success">Paid</span></td>
                 <td><span class="badge badge--neutral">In transit</span></td>
                 <td class="table__actions">
-                  <a class="nav-link" href="admin-order-detail.html">View</a>
+                  <a class="nav-link" href="{% url 'admin-order-detail' %}">View</a>
                   <a class="nav-link" href="#">Hold</a>
                 </td>
               </tr>
               <tr>
                 <td><input type="checkbox"></td>
-                <td><a class="nav-item" href="admin-order-detail.html">#NW-10324</a></td>
+                <td><a class="nav-item" href="{% url 'admin-order-detail' %}">#NW-10324</a></td>
                 <td>Jordan Miles</td>
                 <td>Nov 20</td>
                 <td>$610</td>
                 <td><span class="badge badge--success">Paid</span></td>
                 <td><span class="badge badge--success">Shipped</span></td>
                 <td class="table__actions">
-                  <a class="nav-link" href="admin-order-detail.html">View</a>
+                  <a class="nav-link" href="{% url 'admin-order-detail' %}">View</a>
                   <a class="nav-link" href="#">Refund</a>
                 </td>
               </tr>
