added profile and  customuser registration

--- a/admin_dashboard/templates/admin_dashboard/admin-base.html
+++ b/admin_dashboard/templates/admin_dashboard/admin-base.html
@@ -7,6 +7,7 @@
   <title>Admin Dashboard - Northwind Commerce</title>
   <link rel="stylesheet" href="{% static 'css/admin-base.css' %}">
   {% block extra_styles %}<link rel="stylesheet" href="{% static 'css/admin-dashboard.css' %}">{% endblock extra_styles %}
+  <script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.8/dist/htmx.min.js" integrity="sha384-/TgkGk7p307TH7EXJDuUlgG3Ce1UVolAOFopFekQkkXihi5u/6OCvVKyz1W+idaz" crossorigin="anonymous"></script>
 </head>
 <body>
   <input class="sidebar-toggle" type="checkbox" id="sidebar-toggle">
