--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -7,12 +7,13 @@
   <title>Northwind Commerce</title>
   <link rel="stylesheet" href="{% static 'css/base.css' %}">
   {% block extra_styles %}<link rel="stylesheet" href="{% static 'css/index.css' %}">{% endblock extra_styles %}
+  <script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.8/dist/htmx.min.js" integrity="sha384-/TgkGk7p307TH7EXJDuUlgG3Ce1UVolAOFopFekQkkXihi5u/6OCvVKyz1W+idaz" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="page">
 <header class="topbar">
     <div class="container topbar__inner">
-    <a class="brand" href="index.html">Northwind Commerce</a>
+    <a class="brand" href="{% url 'home' %}">Northwind Commerce</a>
     <label class="search" for="search">
         <svg width="18" height="18" fill="none" stroke="currentColor" stroke-width="2">
         <circle cx="8" cy="8" r="6" />
@@ -20,9 +21,10 @@
         </svg>
         <input id="search" class="search__input" type="search" placeholder="Search products, brands, categories">
     </label>
+    
     <div class="topbar__actions">
         <a class="nav-link" href="sign-in.html">Account</a>
-        <a class="nav-link" href="cart.html">
+        <a class="nav-link" href="{% url 'cart' %}">
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
             <circle cx="9" cy="21" r="1" />
             <circle cx="20" cy="21" r="1" />
