added smooth animations to swap in and out on main pages of admin-dashboard

--- a/admin_dashboard/templates/admin_dashboard/admin-dashboard.html
+++ b/admin_dashboard/templates/admin_dashboard/admin-dashboard.html
@@ -3,6 +3,7 @@
 {% block extra_styles %} <link rel="stylesheet" href="{% static 'css/admin-dashboard.css' %}"> {% endblock extra_styles %}
 
     {% block content %}
+    <link rel="stylesheet" href="{% static 'css/admin-dashboard.css' %}">
 
       <header class="admin-topbar">
         <div class="topbar__left">
