--- a/admin_dashboard/templates/admin_dashboard/admin-product-edit.html
+++ b/admin_dashboard/templates/admin_dashboard/admin-product-edit.html
@@ -3,6 +3,7 @@
 {% block extra_styles %}<link rel="stylesheet" href="{% static 'css/admin-product-edit.css' %}">{% endblock extra_styles %}
 
 {% block content %}
+  <link rel="stylesheet" href="{% static 'css/admin-product-edit.css' %}">
   <header class="admin-topbar">
     <div class="topbar__left">
       <label for="sidebar-toggle" class="btn btn--ghost" aria-label="Toggle menu">
