--- a/admin_dashboard/templates/admin_dashboard/admin-customers.html
+++ b/admin_dashboard/templates/admin_dashboard/admin-customers.html
@@ -1,8 +1,8 @@
 {% extends 'admin_dashboard/admin-base.html' %}
 {% load static %}
 {% block extra_styles %}<link rel="stylesheet" href="{% static 'css/admin-customers.css' %}">{% endblock extra_styles %}
-
 {% block content %}
+<link rel="stylesheet" href="{% static 'css/admin-customers.css' %}">
   <header class="admin-topbar">
     <div class="topbar__left">
       <label for="sidebar-toggle" class="btn btn--ghost" aria-label="Toggle menu">
