--- a/admin_dashboard/templates/admin_dashboard/admin-product-edit.html
+++ b/admin_dashboard/templates/admin_dashboard/admin-product-edit.html
@@ -18,67 +18,126 @@
   </header>
 
   <main class="section">
-    <div class="card">
+    <form class="card" method="">
       <div class="form-grid">
         <div class="form__group">
+          <!-------   PRODUCT NAME    ------->
           <label class="form__label" for="name">Product name</label>
-          <input id="name" class="form__control" type="text" value="Commuter Mac Coat">
+          <input 
+          hx-get="{% url 'validate-product-error' %}"
+          hx-trigger="keyup changed delay:300ms"
+          hx-target=".product-errors"
+          hx-swap="outerHTML"
+          id="product_name" placeholder="enter product name" name="product_name" class="form__control" type="text" value="">
+          {% include 'admin_dashboard/partials/product-add-errors.html' %}
         </div>
+
         <div class="form__group">
           <label class="form__label" for="category">Category</label>
-          <select id="category" class="form__control">
+          <select 
+          hx-get="{% url 'validate-product-error' %}"
+          hx-trigger="keyup changed delay:300ms"
+          hx-target=".product-errors"
+          hx-swap="outerHTML"
+          id="category" class="form__control" name="category_name">
             <option>Outerwear</option>
             <option>Bags</option>
             <option>Footwear</option>
           </select>
+          {% include 'admin_dashboard/partials/product-add-errors.html' %}
         </div>
+
         <div class="form__group">
           <label class="form__label" for="tags">Tags</label>
-          <input id="tags" class="form__control" type="text" value="outerwear, travel, commuter">
+          <input 
+          hx-get="{% url 'validate-product-error' %}"
+          hx-trigger="keyup changed delay:300ms"
+          hx-target=".product-errors"
+          hx-swap="outerHTML"
+          name="tag_name" id="tags" class="form__control" type="text" value="">
+          {% include 'admin_dashboard/partials/product-add-errors.html' %}
         </div>
         <div class="form__group" style="display:flex; gap: var(--space-sm); align-items:center;">
-          <input id="is_digital" type="checkbox" checked>
+          <input name="is_digital" id="is_digital" type="checkbox" checked>
           <label for="is_digital">Is digital</label>
         </div>
+        
       </div>
 
       <div class="form-grid">
         <div class="form__group">
           <label class="form__label" for="quantity">Quantity</label>
-          <input id="quantity" class="form__control" type="number" value="12">
+          <input
+          hx-get="{% url 'validate-product-error' %}"
+          hx-trigger="keyup changed delay:300ms"
+          hx-target=".product-errors"
+          hx-swap="outerHTML"          
+          name="quantity" id="quantity" class="form__control" type="number" value="">
+          {% include 'admin_dashboard/partials/product-add-errors.html' %}
         </div>
         <div class="form__group">
           <label class="form__label" for="size">Size</label>
-          <input id="size" class="form__control" type="text" value="S, M, L, XL">
+          <input 
+          hx-get="{% url 'validate-product-error' %}"
+          hx-trigger="keyup changed delay:300ms"
+          hx-target=".product-errors"
+          hx-swap="outerHTML"         
+          name="size" id="size" class="form__control" type="text" value="">
+          {% include 'admin_dashboard/partials/product-add-errors.html' %}
         </div>
         <div class="form__group">
           <label class="form__label" for="colors">Colors</label>
-          <input id="colors" class="form__control" type="text" value="Navy, Stone, Charcoal">
+          <input
+          hx-get="{% url 'validate-product-error' %}"
+          hx-trigger="keyup changed delay:300ms"
+          hx-target=".product-errors"
+          hx-swap="outerHTML"
+          name="color" id="colors" class="form__control" type="text" value="">
+          {% include 'admin_dashboard/partials/product-add-errors.html' %}
+
         </div>
         <div class="form__group">
           <label class="form__label" for="price">Price</label>
-          <input id="price" class="form__control" type="text" value="$280">
+          <input
+          hx-get="{% url 'validate-product-error' %}"
+          hx-trigger="keyup changed delay:300ms"
+          hx-target=".product-errors"
+          hx-swap="outerHTML"
+          name="price" id="price" class="form__control" type="text" value="$280">
+          {% include 'admin_dashboard/partials/product-add-errors.html' %}
+
         </div>
       </div>
 
       <div class="form-grid">
         <div class="form__group" >
           <label class="form__label" for="image-file">Upload image</label>
-          <input id="image-file" class="form__control" type="file">
+          <input 
+          hx-get="{% url 'validate-product-error' %}"
+          hx-trigger="keyup changed delay:300ms"
+          hx-target=".product-errors"
+          hx-swap="outerHTML"
+          name="product_image" id="image-file" class="form__control" type="file">
+          {% include 'admin_dashboard/partials/product-add-errors.html' %}
+
         </div>
         <div class="form__group" margin-top: var(--space-lg);">
           <label class="form__label" for="description">Description</label>
-          <textarea id="description" class="form__control textarea">Water-resistant mac coat with taped seams and removable liner.</textarea>
-        </div>
+          <textarea
+          hx-get="{% url 'validate-product-error' %}"
+          hx-trigger="keyup changed delay:300ms"
+          hx-target=".product-errors"
+          hx-swap="outerHTML"
+          name="description" id="description" class="form__control textarea">Water-resistant mac coat with taped seams and removable liner.</textarea>
+          {% include 'admin_dashboard/partials/product-add-errors.html' %}
+          </div>
       </div>
-
-
 
       <div class="profile__actions" style="justify-content:flex-end;">
-        <button class="btn" type="button">Add to list</button>
-        <a class="btn btn--ghost" href="{% url 'admin-products' %}">Cancel</a>
+        <button id="add-btn-1" style="opacity:0.5; transition: all 1s ease;" class="btn" type="button">Add to list</button>
+        <!-- <a class="btn btn--ghost" href="{% url 'admin-products' %}">Cancel</a> -->
       </div>
-    </div>
+    </form>
 
     <div style="margin-top: 20px;" class="card customers-table">
       <table class="table">
@@ -126,13 +185,11 @@
             <td style="display:flex; gap: var(--space-sm); align-items:center;">
               <button class="btn" type="button">Save all</button>
             </td>
+            <td><button style="background-color:brown;" class="btn" type="button">Clear All</button></td>
             <td></td>
-            <td></td>
-            <td></td>
-            <td>
-              
-
-            </td>
+            <td> </td>
+            <td> Total price:</td>
+            <td> $10,000.00</td>
             <!-- <td class="table__actions">
             </td> -->
           </tr>
