--- a/admin_dashboard/templates/admin_dashboard/partials/product-add-errors.html
+++ b/admin_dashboard/templates/admin_dashboard/partials/product-add-errors.html
@@ -1,4 +1,4 @@
-<small style="color: red;" class="product-errors">
+<small style="color: red;" class="product-errors-{{class}}">
     {{message}}
 </small>
 
