--- a/admin_dashboard/templates/admin_dashboard/partials/product-add-errors.html
+++ b/admin_dashboard/templates/admin_dashboard/partials/product-add-errors.html
@@ -3,5 +3,5 @@
 </small>
 
 {% if btn_is_valid %}
-<button class="btn" style="opacity:1" id="add-btn-1" type="button" hx-swap-oob="true">Add to list</button>
+<button class="btn" style="opacity:1" id="add-btn-1" type="submit" hx-swap-oob="true">Add to list</button>
 {% endif %}
