--- a/admin_dashboard/static/css/admin-product-edit.css
+++ b/admin_dashboard/static/css/admin-product-edit.css
@@ -15,9 +15,9 @@
 small{
   position: absolute;
   top: 98%;
-  font-size: .6rem;
+  font-size: .7rem;
   display: inline-block;
-  text-align: center;
+  /* text-align: center; */
 }
 
 .form__label {
