changed product add error processor name for cosistency

--- a/admin_dashboard/templates/admin_dashboard/admin-product-edit.html
+++ b/admin_dashboard/templates/admin_dashboard/admin-product-edit.html
@@ -167,7 +167,7 @@
       </div>
 
       <div class="profile__actions" style="justify-content:flex-end;">
-        <button id="add-btn-1" style="opacity:0.5; transition: all 1s ease;" class="btn" type="submit">Add to list</button>
+        <button id="add-btn-1" style=" transition: all .5s ease;" class="btn" type="submit">Add to list</button>
         <!-- <a class="btn btn--ghost" href="{% url 'admin-products' %}">Cancel</a> -->
       </div>
     </form>
