--- a/admin_dashboard/templates/admin_dashboard/partials/product-add-errors.html
+++ b/admin_dashboard/templates/admin_dashboard/partials/product-add-errors.html
@@ -2,6 +2,6 @@
     {{message}}
 </small>
 
-{% if btn_is_valid %}
+<!-- {% if btn_is_valid %}
 <button class="btn" style="opacity:1" id="add-btn-1" type="submit" hx-swap-oob="true">Add to list</button>
-{% endif %}
+{% endif %} -->
