--- a/admin_dashboard/templates/admin_dashboard/admin-products.html
+++ b/admin_dashboard/templates/admin_dashboard/admin-products.html
@@ -17,7 +17,7 @@
       <input type="search" placeholder="Search products or SKU">
     </div>
     <div class="topbar__right">
-      <a class="btn" href="{% url 'admin-product-edit' %}">Add Product</a>
+      <a class="btn" href="{% url 'admin-product-add' %}">Add Product</a>
     </div>
   </header>
 
@@ -74,7 +74,7 @@
             <td><span class="badge badge--warning">12</span></td>
             <td><span class="badge badge--success">Visible</span></td>
             <td class="product-actions">
-              <a class="btn-mini" href="{% url 'admin-product-edit' %}">Edit</a>
+              <a class="btn-mini" href="{% url 'admin-product-add' %}">Edit</a>
               <a class="btn-mini btn-mini--ghost" href="#">View</a>
             </td>
           </tr>
@@ -89,7 +89,7 @@
             <td><span class="badge badge--success">58</span></td>
             <td><span class="badge badge--success">Visible</span></td>
             <td class="product-actions">
-              <a class="btn-mini" href="{% url 'admin-product-edit' %}">Edit</a>
+              <a class="btn-mini" href="{% url 'admin-product-add' %}">Edit</a>
               <a class="btn-mini btn-mini--ghost" href="#">View</a>
             </td>
           </tr>
@@ -104,7 +104,7 @@
             <td><span class="badge badge--warning">18</span></td>
             <td><span class="badge badge--success">Visible</span></td>
             <td class="product-actions">
-              <a class="btn-mini" href="{% url 'admin-product-edit' %}">Edit</a>
+              <a class="btn-mini" href="{% url 'admin-product-add' %}">Edit</a>
               <a class="btn-mini btn-mini--ghost" href="#">View</a>
             </td>
           </tr>
@@ -119,7 +119,7 @@
             <td><span class="badge badge--danger">6</span></td>
             <td><span class="badge badge--success">Visible</span></td>
             <td class="product-actions">
-              <a class="btn-mini" href="{% url 'admin-product-edit' %}">Edit</a>
+              <a class="btn-mini" href="{% url 'admin-product-add' %}">Edit</a>
               <a class="btn-mini btn-mini--ghost" href="#">View</a>
             </td>
           </tr>
@@ -134,7 +134,7 @@
             <td><span class="badge badge--danger">2</span></td>
             <td><span class="badge badge--warning">Hidden</span></td>
             <td class="product-actions">
-              <a class="btn-mini" href="{% url 'admin-product-edit' %}">Edit</a>
+              <a class="btn-mini" href="{% url 'admin-product-add' %}">Edit</a>
               <a class="btn-mini btn-mini--ghost" href="#">View</a>
             </td>
           </tr>
